--- a/src/components/style/bulkBar.css
+++ b/src/components/style/bulkBar.css
@@ -1,13 +1,13 @@
 .bar {
-    height: 28px;
+    height: 24px;
     width: 100%;
     background-color: #5f0606;
 }
 
 .bar button {
     vertical-align: top;
-    font-size: 20px;
-    margin: 4px 10px;
+    font-size: 18px;
+    margin: 2px 10px;
     background: none;
     color: #FFFFFF;
     line-height: 1;
