--- a/src/components/style/generators.css
+++ b/src/components/style/generators.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  height: 48vh;
+  height: 47vh;
   width: 100%;
   overflow-y: auto;
 }
