--- a/src/components/style/structures.css
+++ b/src/components/style/structures.css
@@ -2,7 +2,7 @@
     background: #2b862b;
     color: #FFFFFF;
     text-align: center;
-    height: 48vh;
+    height: 47vh;
     width: 100%;
   }
 
