--- a/src/components/style/upgrades.css
+++ b/src/components/style/upgrades.css
@@ -2,7 +2,7 @@
   background: #C8700F;
   color: #FFFFE0;
   text-align: center;
-  height: 48vh;
+  height: 47vh;
   width: 100%;
   overflow-y: auto;
 }
@@ -49,9 +49,10 @@
 }
 
 .upgrade {
+  position: relative;
+  float: left;
   width: 64px;
   height: 64px;
-  float: left;
   margin-left: 5px;
   margin-bottom: 5px;
   border: none;
